Fix logo and side menu items when not logged in

--- a/app/modules/common/views/drawer.html
+++ b/app/modules/common/views/drawer.html
@@ -5,13 +5,13 @@
     </div>
     <div class="list-cover">
       <ul id="accordion1" ng-if="!loggedIn">
-        <li class="panel"><a href="javascript:void(0)">Home</a></li>
-        <li class="panel"><a href="javascript:void(0)">About Us</a></li>
-        <li class="panel"><a href="javascript:void(0)">How It Works</a></li>
-        <li class="panel"><a href="javascript:void(0)">Why Finaskus?</a></li>
-        <li class="panel"><a href="javascript:void(0)">FAQ</a></li>
-        <li class="panel"><a href="javascript:void(0)">Blog</a></li>
-        <li class="panel"><a href="javascript:void(0)">Contact Us</a></li>
+        <li class="panel"><a href="https://www.finaskus.com">Home</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/#/aboutUs">About Us</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/#/#howItWorks">How It Works</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/#/#whyChooseUs">Why FinAskUs?</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/#/faq">FAQ</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/blog">Blog</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/#/contactUs">Contact Us</a></li>
         <a href="javascript:void(0)" click-redirect="/gettingStarted" class="fin-btn fin-start">GET STARTED NOW</a>
       </ul>
       <ul id="accordion1" ng-if="loggedIn">
