--- a/app/modules/smartportfolio/views/compare.html
+++ b/app/modules/smartportfolio/views/compare.html
@@ -1,6 +1,6 @@
 <section class="recommended">
 	<div class="recommended-table-section">
-		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
+		<div class="pull-right indicator-cover retirement" ng-if="false">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/retirementInner.png"></div>
 		        <p>Retirement</p>
