--- a/less/common.less
+++ b/less/common.less
@@ -887,6 +887,10 @@ button[disabled]{
 .selectRisk_cover{
 	
     margin-bottom: 2%;
+    margin-right: 1%;
+    @media @below768{
+    	margin-right: 0;
+    }
 	input[type="radio"],input[type="checkbox"] {
 	    display:none;
 	    + label{
