--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -3,7 +3,7 @@
 </div>
 <section class="recommended">
 	<div class="recommended-table-section">
-		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
+<!-- 		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/retirementInner.png"></div>
 		        <p>Retirement</p>
@@ -51,7 +51,7 @@
 		        <p>Others</p>
 		    </div> 
 		    <bubble-gen length="6" goal="'Others'"></bubble-gen>
-	    </div>
+	    </div> -->
 		<div class="table-outer-cover schemeTable" ng-repeat="eachSchemeType in recommendedSchemes">
 			<div class="thead">
 				<div class="tr">
