--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -20,6 +20,9 @@ section{
 				.image-div{
 					img{
 						width:104%;
+						@media @below768{
+							width: 80%;
+						}
 					}
 				}
 			}
@@ -27,6 +30,9 @@ section{
 				.image-div{
 					img{
 						width:115%;
+						@media @below768{
+							width: 80%;
+						}
 					}
 				}
 			}
@@ -34,6 +40,9 @@ section{
 				.image-div{
 					img{
 						width:78%;
+						@media @below768{
+							width: 80%;
+						}
 					}
 				}
 			}
@@ -41,6 +50,9 @@ section{
 				.image-div{
 					img{
 						width:125%;
+						@media @below768{
+							width: 80%;
+						}
 					}
 				}
 			}
@@ -67,6 +79,9 @@ section{
 					width: 100%;
 					margin-bottom:7%;
 					margin-top: 3%;
+					@media @below768{
+					margin-bottom: 3%;
+					}
 				}
 				&.score{
 					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
