--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -12,12 +12,19 @@ section{
     		opacity:0.7;
 		}
 		.invest-outer-cover{
+			@media @below768{
+				margin-top: 12%;
+
+			}
 			.investCover{
 				position:relative;
 				width:100%;
 				height:234px;
 				margin:0 auto;
 				display:table;
+				@media @below768{
+					width: 84%;
+				}
 				.image-div{
 					display:table-cell;
 					vertical-align:middle;
@@ -111,6 +118,9 @@ section{
 				.image-div{
 					img{
 						width:70%;
+						@media @below768{
+							width: 40%;
+						}
 					}
 				}
 			}
@@ -118,13 +128,20 @@ section{
 				.image-div{
 					img{
 						width:57%;
+						@media @below768{
+							width: 40%;
+						}
 					}
+
 				}
 			}
 			&:nth-child(3){
 				.image-div{
 					img{
 						width:45%;
+						@media @below768{
+							width: 40%;
+						}
 					}
 				}
 			}
@@ -132,6 +149,9 @@ section{
 				.image-div{
 					img{
 						width:80%;
+						@media @below768{
+							width: 40%;
+						}
 					}
 				}
 			}
@@ -141,7 +161,10 @@ section{
 					.GLOBAL_FONT_STYLE('Roboto-Light',#303030,normal);
 					.PIXEL2EM(16);	
 					margin-bottom: 12%;	
-					height:50px;			
+					height:50px;
+					@media @below768{
+						margin-bottom: 3%;
+					}			
 				}
 				h3{
 					.GLOBAL_FONT_STYLE('PlayfairDisplay-Bold',#303030,normal);
