--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -229,7 +229,7 @@
 						  <div class="col-xs-12">
 								<div class="progress">
 								    <div class="progress-bar" role="progressbar" ng-style="{'width':'{{finGoals.progress}}%'}">
-								    <span class="progress-price"><span class="currency">&#8377;</span><span class="amount">{{finGoals.invested_value}}</span></span>
+								    <span class="progress-price"><span class="currency">&#8377;</span><span class="amount">{{finGoals.expected_value}}</span></span>
 								    <span class="progress-percentage placeholder">{{finGoals.progress}}%</span>
 								    </div>
 								</div>
