--- a/less/register.less
+++ b/less/register.less
@@ -180,6 +180,7 @@ section{
 					position:absolute;
 					pointer-events:none;
 					top:0;
+					left: 0;
 					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
 					.PIXEL2EM(24);
 					transition:all 0.2s ease;
