--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -312,6 +312,9 @@ section{
 					@media @below768{
 						margin-top: 6%;
 					}
+					@media @between1024-768{
+						margin-top:6%;
+					}
 					p{
 						
 						float: left;
