--- a/app/modules/goals/modules/others/views/othersStarted.html
+++ b/app/modules/goals/modules/others/views/othersStarted.html
@@ -13,7 +13,7 @@
             <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to save a specific amount per month,show me how much will I get when i want to fulfill the goal</label>
         </div>
          -->
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-lg-5 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
