--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -137,9 +137,11 @@
 	</div>
 	<div class="col-xs-12 bottom-desc">
 		<p class="text-left">I am done setting my goals.</p>
-		<div class="fin-btn-group addMargin text-left">
-            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
-            <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
-        </div>
+		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-6">
+			<div class="fin-btn-group addMargin text-left">
+	            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
+	            <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
+	        </div>
+	    </div>
 	</div>
 </section>
