--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -29,7 +29,7 @@ section{
 			&:nth-child(2){
 				.image-div{
 					img{
-						width:115%;
+						width:140%;
 						@media @below768{
 							width: 80%;
 						}
@@ -86,7 +86,7 @@ section{
 				&.score{
 					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
               		.PIXEL2EM(50); 
-              		line-height:40px;
+              		
               		float:left;
               		width:100%;
 				}
@@ -141,7 +141,10 @@ section{
 				}
 			}
 			.invest-goal{
-				margin: 46px 0 46px 35px;
+				margin: 14% 6%;
+				@media @below768{
+					margin : 14% auto;
+				}
 			}
 			.checkbox-cover{
 				label{
