--- a/less/widgets.less
+++ b/less/widgets.less
@@ -163,18 +163,20 @@
 		width: 40%;
 		margin: 0 auto;
 		margin-top: -8%;
-		background-color:#fff;
+		background-color:#f0f4f7;
 		border-radius:10px;
 		img{
     		background-color: rgb(240,244,247);
-			width: 100%;
+			width: 65%;
+			margin:0 auto;
 		}
 		p{
-		    font-size: 15px !important;
+		    font-size: 12px !important;
     		margin-bottom: 9px !important;
     		margin-top: 5px;
     		padding-bottom:10px;
     		color: rgb( 36, 122, 188 ) !important;
+    		background-color: #fff;
 		}
 	}
 	.reset_allocation{
