--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -127,7 +127,7 @@
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="{{$root.redirectURL}}" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANNING</button>
-	    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">INVEST AND PAY NOW</button>
+	    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
 	</div>
 </section>
 
